Create training and test subsets from input data

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "Tile-based classification using Sentinel-2 and EuroSAT data-Training.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyP6iuVrvK3pK/PtK53dOfyh",
+      "authorship_tag": "ABX9TyNmZS6ngLDT9irEYrUVh0WN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,14 +122,14 @@
         "import zipfile\n",
         "# end imports #\n",
         "\n",
-        "os.chdir(current_dir) # go back to your previous dir\n",
+        "# os.chdir(current_dir) # go back to your previous dir\n",
         "\n",
-        "sys.path.append(s3_home) # restore the s3 root in the $path\n",
+        "# sys.path.append(s3_home) # restore the s3 root in the $path\n",
         "\n",
         "## end s3fs import snippet ##\n",
         "\n"
       ],
-      "execution_count": 35,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -139,7 +140,7 @@
       "source": [
         "# !unzip \"drive/MyDrive/Land Classification/S2_Tile_based_classification.zip\" -d \"drive/MyDrive/Land Classification/\""
       ],
-      "execution_count": 36,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -269,7 +270,7 @@
         "\n",
         "  return stack_10m_final_sorted, stack_20m_final_sorted, stack_60m_final_sorted"
       ],
-      "execution_count": 37,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -310,7 +311,7 @@
         "    \n",
         "    return stack_sorted"
       ],
-      "execution_count": 38,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -330,7 +331,7 @@
       "source": [
         ""
       ],
-      "execution_count": 38,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -350,7 +351,7 @@
       "source": [
         ""
       ],
-      "execution_count": 38,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -370,7 +371,7 @@
       "source": [
         ""
       ],
-      "execution_count": 38,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -399,7 +400,7 @@
         "# MAIN_PATH = 'drive/MyDrive/Land Classification/S2_Tile_based_classification/'\n",
         "DATA_PATH = 'drive/MyDrive/Land Classification/S2_Tile_based_classification/01_Input_data/S2_tile_4_training/'"
       ],
-      "execution_count": 39,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -421,7 +422,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cPzhHYgYRjp0",
-        "outputId": "ea52f003-6461-40ea-a3d8-396d82177746"
+        "outputId": "773fc448-5c39-4d4e-a66e-000cc4c2d5b1"
       },
       "source": [
         "import glob\n",
@@ -448,13 +449,15 @@
         "      tmp_gt[i]=1\n",
         "      lst_gt_training.append(tmp_gt)"
       ],
-      "execution_count": 40,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[AI4EO_MOOC]_log: There are 10 folders\n",
+            "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/River class\n",
+            "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/SeaLake class\n",
             "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/AnnualCrop class\n",
             "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/Forest class\n",
             "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/HerbaceousVegetation class\n",
@@ -462,9 +465,7 @@
             "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/Industrial class\n",
             "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/Pasture class\n",
             "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/PermanentCrop class\n",
-            "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/Residential class\n",
-            "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/River class\n",
-            "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/SeaLake class\n"
+            "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/Residential class\n"
           ]
         }
       ]
@@ -476,12 +477,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZTGiHQLMUg-q",
-        "outputId": "3ae05326-8750-42a4-88bc-290eb60615c4"
+        "outputId": "26a24864-4c9d-4fc5-ded4-07306f7ce5f3"
       },
       "source": [
         "type(lst_gt_training[0])"
       ],
-      "execution_count": 41,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -491,7 +492,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 15
         }
       ]
     },
@@ -511,13 +512,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8-DPXIFwcHND",
-        "outputId": "b54efcd0-2fae-46a7-a152-2762e5e48a03"
+        "outputId": "2110d76f-6775-4091-a5db-6fb1396cb59d"
       },
       "source": [
         "print(len(lst_arr_training), len(lst_gt_training))\n",
         "print(lst_arr_training[1000-1].shape, lst_gt_training[1000-1].shape)"
       ],
-      "execution_count": 42,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,7 +548,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aqN3NZlCkkje",
-        "outputId": "28577a42-5313-4e90-ae5f-d91dc62ecb61"
+        "outputId": "a5d08c06-1c72-4dda-9acc-177788145463"
       },
       "source": [
         "arr_training = np.asarray(lst_arr_training)\n",
@@ -555,7 +556,7 @@
         "\n",
         "arr_training.shape, arr_gt.shape"
       ],
-      "execution_count": 44,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -565,7 +566,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 17
         }
       ]
     },
@@ -588,7 +589,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FpxHfBGzl1f7",
-        "outputId": "ceecf775-c9fd-494c-81b5-82c9c2cb89e6"
+        "outputId": "6b6198af-7245-45b3-d9ae-b86f0d1b920b"
       },
       "source": [
         "num_of_img,bands,rows,columns=arr_training.shape\n",
@@ -597,7 +598,7 @@
         "arr_training_res = np.reshape(arr_training,(num_of_img,rows,columns,bands))\n",
         "arr_training_res.shape"
       ],
-      "execution_count": 45,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -614,7 +615,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 18
         }
       ]
     },
@@ -625,12 +626,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ElXLe1k7oLH8",
-        "outputId": "de6a2ffe-f8aa-47ea-a58c-7bdcb1d384bb"
+        "outputId": "9ce819d0-c0a5-46e7-fc33-e238770872da"
       },
       "source": [
         "type(arr_training_res)"
       ],
-      "execution_count": 46,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -640,7 +641,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 19
         }
       ]
     },
@@ -650,13 +651,219 @@
         "id": "pD44WxPToUOo"
       },
       "source": [
-        "##**Normalisation of the image radiances to a [0,1] interval**"
+        "##**Normalisation of the image radiances to a [0,1] interval**\n",
+        "\n",
+        "As a final step, we normalize thedata and bring the data into a [0,1] range. We want to transform the data type from `uint16 - [0,65535]` to `float32`. Then we loop over each image in the numpy multi-dimensional array, we retreive the maximum value of each image with the numpy function `.amax()` and then we divide each value in the array by the maximum value."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ISTo5OOHoSrV"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ISTo5OOHoSrV",
+        "outputId": "540020ac-adc3-4177-aa02-fbd1b3bcd7ad"
+      },
+      "source": [
+        "print('[AI4EO_MOOC]_log: Normalization of data into [0,1] interval...')\n",
+        "arr_training_res = arr_training_res.astype('float32')\n",
+        "for i in range(0, len(arr_training_res)):\n",
+        "  amax_tmp=np.amax(arr_training_res[i,:,:,:])\n",
+        "  arr_training_res[i,:,:,:] = arr_training_res[i,:,:,:] / amax_tmp"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[AI4EO_MOOC]_log: Normalization of data into [0,1] interval...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4WMbr-UNQZC4"
+      },
+      "source": [
+        "Let us inspect one image from the array. Notice that the interval range is now a float number between 0 and 1."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e8k6cHerOvVz",
+        "outputId": "5cc0576b-49ad-43e7-e52c-67c36a9f9388"
+      },
+      "source": [
+        "arr_training_res[1000-1,:,:,:]"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[0.3875834 , 0.3875834 , 0.3875834 , ..., 0.38874385,\n",
+              "         0.38903394, 0.38932404],\n",
+              "        [0.38961416, 0.3901944 , 0.39048448, ..., 0.39657673,\n",
+              "         0.39773718, 0.3988976 ],\n",
+              "        [0.40034813, 0.40179867, 0.4032492 , ..., 0.41746446,\n",
+              "         0.4192051 , 0.42094576],\n",
+              "        ...,\n",
+              "        [0.3948361 , 0.3948361 , 0.3948361 , ..., 0.39454597,\n",
+              "         0.39454597, 0.39454597],\n",
+              "        [0.3948361 , 0.3948361 , 0.3951262 , ..., 0.40382943,\n",
+              "         0.40557006, 0.40760082],\n",
+              "        [0.40934145, 0.4113722 , 0.41340294, ..., 0.42181608,\n",
+              "         0.42210618, 0.42239627]],\n",
+              "\n",
+              "       [[0.3872933 , 0.3872933 , 0.3875834 , ..., 0.3913548 ,\n",
+              "         0.3916449 , 0.39193502],\n",
+              "        [0.39251524, 0.39280534, 0.39338556, ..., 0.39628664,\n",
+              "         0.39657673, 0.39657673],\n",
+              "        [0.39657673, 0.39657673, 0.39657673, ..., 0.3959965 ,\n",
+              "         0.3959965 , 0.3959965 ],\n",
+              "        ...,\n",
+              "        [0.4029591 , 0.4029591 , 0.4029591 , ..., 0.4029591 ,\n",
+              "         0.4029591 , 0.4029591 ],\n",
+              "        [0.4029591 , 0.4029591 , 0.4029591 , ..., 0.4029591 ,\n",
+              "         0.4029591 , 0.4032492 ],\n",
+              "        [0.4032492 , 0.4032492 , 0.4035393 , ..., 0.4029591 ,\n",
+              "         0.40266898, 0.4023789 ]],\n",
+              "\n",
+              "       [[0.40382943, 0.40382943, 0.40382943, ..., 0.4032492 ,\n",
+              "         0.4032492 , 0.4032492 ],\n",
+              "        [0.4032492 , 0.4032492 , 0.4035393 , ..., 0.4032492 ,\n",
+              "         0.4032492 , 0.4029591 ],\n",
+              "        [0.4029591 , 0.40266898, 0.40266898, ..., 0.4029591 ,\n",
+              "         0.4029591 , 0.4029591 ],\n",
+              "        ...,\n",
+              "        [0.40527996, 0.40586016, 0.4067305 , ..., 0.41398317,\n",
+              "         0.41485348, 0.41572383],\n",
+              "        [0.41630402, 0.41688424, 0.41717437, ..., 0.41862488,\n",
+              "         0.41862488, 0.41862488],\n",
+              "        [0.41862488, 0.41862488, 0.41833478, ..., 0.41311285,\n",
+              "         0.41224253, 0.4116623 ]],\n",
+              "\n",
+              "       ...,\n",
+              "\n",
+              "       [[0.14070205, 0.14070205, 0.13606034, ..., 0.12880766,\n",
+              "         0.12822744, 0.12706701],\n",
+              "        [0.12561648, 0.12445605, 0.12329562, ..., 0.11981433,\n",
+              "         0.11923411, 0.11807369],\n",
+              "        [0.11749347, 0.11720336, 0.11633305, ..., 0.11691326,\n",
+              "         0.11691326, 0.11662315],\n",
+              "        ...,\n",
+              "        [0.11430229, 0.11488251, 0.11604293, ..., 0.11575283,\n",
+              "         0.11430229, 0.11546272],\n",
+              "        [0.11807369, 0.12271541, 0.1302582 , ..., 0.29503918,\n",
+              "         0.32695097, 0.35567158],\n",
+              "        [0.3794604 , 0.3994778 , 0.41746446, ..., 0.5256745 ,\n",
+              "         0.53495795, 0.537859  ]],\n",
+              "\n",
+              "       [[0.12097476, 0.12097476, 0.12039454, ..., 0.11720336,\n",
+              "         0.11575283, 0.11517262],\n",
+              "        [0.11575283, 0.11662315, 0.11691326, ..., 0.11604293,\n",
+              "         0.11488251, 0.11430229],\n",
+              "        [0.1145924 , 0.11546272, 0.11546272, ..., 0.12039454,\n",
+              "         0.12416594, 0.13170873],\n",
+              "        ...,\n",
+              "        [0.48709023, 0.56367856, 0.62257034, ..., 0.5619379 ,\n",
+              "         0.5822454 , 0.608065  ],\n",
+              "        [0.63359445, 0.65564257, 0.6733391 , ..., 0.6005222 ,\n",
+              "         0.5921091 , 0.58775747],\n",
+              "        [0.58775747, 0.5894981 , 0.5915289 , ..., 0.58369595,\n",
+              "         0.60255295, 0.6231506 ]],\n",
+              "\n",
+              "       [[0.12068465, 0.12068465, 0.11749347, ..., 0.11517262,\n",
+              "         0.11488251, 0.1145924 ],\n",
+              "        [0.1145924 , 0.11604293, 0.1183638 , ..., 0.41746446,\n",
+              "         0.49927473, 0.5677401 ],\n",
+              "        [0.61473745, 0.63881636, 0.64606905, ..., 0.62257034,\n",
+              "         0.65129095, 0.6715985 ],\n",
+              "        ...,\n",
+              "        [0.6301131 , 0.589208  , 0.57122135, ..., 0.6425878 ,\n",
+              "         0.6370757 , 0.63388455],\n",
+              "        [0.64868003, 0.68523353, 0.7365825 , ..., 0.7856107 ,\n",
+              "         0.76211196, 0.75776035],\n",
+              "        [0.77429646, 0.8018567 , 0.8236147 , ..., 0.55149406,\n",
+              "         0.60226285, 0.65361184]]], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h0gubL7dRDfz"
+      },
+      "source": [
+        "# **2. Create training and test subsets from input data\n",
+        "\n",
+        "We'll randomly split the training data into a `training subset` and a `testing subset`. Scikit-learn offers a popular function called `train-test-split()`, which creates 4 subsets based on the input and output variables `X - arr_training_res` and `y - arr_gt`. The function takes the following kwargs.\n",
+        "* `arrays`: input and output data arrays\n",
+        "* `test_size`: a float number representing the proportion of the input dataset to include in the test subset\n",
+        "* `random_state`: An integer assuring reproducibility of the random shuffling of the data\n",
+        "\n",
+        "We'll use 85% of the input data for training and 15% for testing."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AB7vhItcQw02",
+        "outputId": "bc36658e-669b-44b1-80de-34dead7bf62e"
+      },
+      "source": [
+        "test_size=0.15\n",
+        "print('[AI4EO_MOOC]_log: Training (%0.2f %%) and validation (%0.2f %%) split..' % (\n",
+        "      (1-test_size)*100,(test_size)*100))\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "        arr_training_res,\n",
+        "        arr_gt,\n",
+        "        test_size=test_size,\n",
+        "        random_state=42)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[AI4EO_MOOC]_log: Training (85.00 %) and validation (15.00 %) split..\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AjczIXyaTzuQ"
+      },
+      "source": [
+        "## **3. Define the Convolutional Neural Network Architecture**\n",
+        "\n",
+        "We'll initiate a `sequential neural network` model with the Keras class `keras.Sequential()`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G4MBqhs0ULzj"
       },
       "source": [
         ""
