Define resample_3d helper function

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyNmZS6ngLDT9irEYrUVh0WN",
+      "authorship_tag": "ABX9TyNc2N3bFqQ3P8mF2CGu2TQf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -329,9 +329,39 @@
         "id": "mIS-jKoKI8uK"
       },
       "source": [
-        ""
+        "'''\n",
+        "function name:\n",
+        "  resample_3d\n",
+        "description:\n",
+        "  wrapper of ndimage zoom. Bilinear interpolation for resampling array\n",
+        "input:\n",
+        "  stack: array to be resampled;\n",
+        "  row10m: the expected row;\n",
+        "  col10m: the expected col;\n",
+        "  rate: the rate of the transformation;\n",
+        "output:\n",
+        "  stack_10m: resampled array\n",
+        "'''\n",
+        "def resample_3d(\n",
+        "        stack,\n",
+        "        row10m,\n",
+        "        col10m,\n",
+        "        rate):\n",
+        "    row, col, bands = stack.shape\n",
+        "    print(\"[AI4EO_MOOC]_log: Array shape (%d,%d,%d)\" % (row, col, bands))\n",
+        "\n",
+        "    stack_10m = np.zeros((row10m, col10m, bands),dtype=np.uint16)\n",
+        "    print(\"[AI4EO_MOOC]_log: Resize array bands from (%d,%d,%d) to (%d,%d,%d)\" % (\n",
+        "        row, col, bands, row10m, col10m, bands))\n",
+        "    \n",
+        "    for i in range(0, bands):\n",
+        "      stack_10m[:, :, i] = ndimage.zoom(stack[:, :,i], rate)\n",
+        "\n",
+        "    del (stack)\n",
+        "\n",
+        "    return stack_10m"
       ],
-      "execution_count": 12,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -855,15 +885,65 @@
         "id": "AjczIXyaTzuQ"
       },
       "source": [
-        "## **3. Define the Convolutional Neural Network Architecture**\n",
+        "## **3. Define the Convolutional Neural Network architecture**\n",
         "\n",
-        "We'll initiate a `sequential neural network` model with the Keras class `keras.Sequential()`."
+        "As our first step, we'll initiate a `sequential neural network` model with the Keras class `keras.Sequential()`."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G4MBqhs0ULzj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G4MBqhs0ULzj",
+        "outputId": "f21e9358-2d86-47ba-9a38-04d476c2fed6"
+      },
+      "source": [
+        "_, num_classes = y_train.shape\n",
+        "print('[AI4EO_MOOC]_log: Convolutional Neural Network architecture:')\n",
+        "model = keras.Sequential()"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[AI4EO_MOOC]_log: Convolutional Neural Network architecture:\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CQnyt479iNG8"
+      },
+      "source": [
+        "The next step is to build up the architecture of the `Convolution Neural Network (CNN)`, with the function `model.add()`. A `CNN` composes of the following set of layers:\n",
+        "\n",
+        "* `Conv2D`: Convolutional layer with number of filters, e.g. 32 or 64, the shape of thje filter ((3,3), (5,5),...) and the application of padding\n",
+        "* `Activation`: Activation layer, e.g. `relu`, `sigmoid`, ...\n",
+        "* `Maxpooling2D`: Max Pooling layer with shape (2,2), (3,3), ...\n",
+        "* `Dropout`: to reduce overfitting\n",
+        "\n",
+        "In the following code block, we build three blocks of layers:\n",
+        "\n",
+        "* **First block of layers**\n",
+        "The first block of layers consist of two `Conv2D` layers with 32 neurons and we add non-linear properties by adding an `Activation` layer in between. We then define a `MaxPooling2D` layer, which downsamples the input by taking the maximum value of a given window size. The block of layers finishes with `Dropout` layer, which randomly skips 25% of the interconnections.\n",
+        "\n",
+        "* **Second block of layers**\n",
+        "The second block of layers consists of two `Conv2D` layers, but with 64 neurons and we add non-linear properties by adding an `Activation` layer in between. We then define a `MaxPooling2D` layer, which downsamples the input by taking the maximum value of a given window size. The block of layers finishes with a  `Dropout` layer, which randomly skips 25% of the interconnections.\n",
+        "\n",
+        "* **Third block of layers**\n",
+        "The third block consists of two `Dense` layers, which are fully-connected layers. In between, we again add non-linear properties by adding an `Activation` layer. The number of neurons of the final 'Dense` layer has to be the same as the number of land use classes, in this case 10."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UNZhkwRLmPI8"
       },
       "source": [
         ""
