define sentinel2_format helper function and Conv Neural Network

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyNc2N3bFqQ3P8mF2CGu2TQf",
+      "authorship_tag": "ABX9TyNbPYV10onF4494L8kL8e0v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,7 +129,7 @@
         "## end s3fs import snippet ##\n",
         "\n"
       ],
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
       "source": [
         "# !unzip \"drive/MyDrive/Land Classification/S2_Tile_based_classification.zip\" -d \"drive/MyDrive/Land Classification/\""
       ],
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -270,7 +270,7 @@
         "\n",
         "  return stack_10m_final_sorted, stack_20m_final_sorted, stack_60m_final_sorted"
       ],
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -311,7 +311,7 @@
         "    \n",
         "    return stack_sorted"
       ],
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -361,7 +361,7 @@
         "\n",
         "    return stack_10m"
       ],
-      "execution_count": 27,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -379,9 +379,63 @@
         "id": "eg3mAuYCJAO-"
       },
       "source": [
+        "'''\n",
+        "function name:\n",
+        "  sentinel2_format\n",
+        "description:\n",
+        "  This function transforms the multistack into sentinel2 format arrays with bands in the right positions for our AI model.\n",
+        "input:\n",
+        "  total_stack: array that is the concatenation of stack10, stack_20mTo10m and stack_60mTo10m.\n",
+        "output:\n",
+        "  sentinel2: sentinel2 format array\n",
+        "'''\n",
+        "def sentinel2_format(\n",
+        "        total_stack):\n",
+        "  \n",
+        "    row_tot, col_tot, bands_tot = total_stack.shape\n",
+        "    sentinel2 = np.zeros((row_tot, col_tot, bands_tot),dtype=np.unit16)\n",
+        "\n",
+        "    print(\"[AI4EO_MOOC]_log: Creating a total stack with following list of bands:\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 1 - Coastal aerosol\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 2 - Blue\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 3 - Green\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 4 - Red\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 5 - Vegetation red edge\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 6 - Vegetation red edge\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 7 - Vegetation red edge\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 8 - NIR\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 8A - Narrow NIR\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 9 - Water vapour\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 10 - SWIR - Cirrus\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 11 - SWIR\")\n",
+        "    print(\"[AI4EO_MOOC]_log: Band 12 - SWIR\")\n",
+        "\n",
+        "    sentinel2[:, :, 0] = total_stack[:, :, 10]\n",
+        "    sentinel2[:, :, 1] = total_stack[:, :, 0]\n",
+        "    sentinel2[:, :, 2] = total_stack[:, :, 1]\n",
+        "    sentinel2[:, :, 3] = total_stack[:, :, 2]\n",
+        "    sentinel2[:, :, 4] = total_stack[:, :, 4]\n",
+        "    sentinel2[:, :, 5] = total_stack[:, :, 5]\n",
+        "    sentinel2[:, :, 6] = total_stack[:, :, 6]\n",
+        "    sentinel2[:, :, 7] = total_stack[:, :, 3]\n",
+        "    sentinel2[:, :, 8] = total_stack[:, :, 9]\n",
+        "    sentinel2[:, :, 9] = total_stack[:, :, 11]\n",
+        "    sentinel2[:, :, 10] = total_stack[:, :, 12]\n",
+        "    sentinel2[:, :, 11] = total_stack[:, :, 7]\n",
+        "    sentinel2[:, :, 12] = total_stack[:, :, 8]"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PSAwf7WVuhN2"
+      },
+      "source": [
         ""
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -401,7 +455,7 @@
       "source": [
         ""
       ],
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -430,7 +484,7 @@
         "# MAIN_PATH = 'drive/MyDrive/Land Classification/S2_Tile_based_classification/'\n",
         "DATA_PATH = 'drive/MyDrive/Land Classification/S2_Tile_based_classification/01_Input_data/S2_tile_4_training/'"
       ],
-      "execution_count": 13,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -452,7 +506,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cPzhHYgYRjp0",
-        "outputId": "773fc448-5c39-4d4e-a66e-000cc4c2d5b1"
+        "outputId": "e09d09c8-805e-497b-f5b3-236a07053324"
       },
       "source": [
         "import glob\n",
@@ -479,7 +533,7 @@
         "      tmp_gt[i]=1\n",
         "      lst_gt_training.append(tmp_gt)"
       ],
-      "execution_count": 14,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,12 +561,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZTGiHQLMUg-q",
-        "outputId": "26a24864-4c9d-4fc5-ded4-07306f7ce5f3"
+        "outputId": "959e16d7-e77b-4a11-c748-8bafaa4dc82b"
       },
       "source": [
         "type(lst_gt_training[0])"
       ],
-      "execution_count": 15,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -522,7 +576,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 12
         }
       ]
     },
@@ -542,13 +596,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8-DPXIFwcHND",
-        "outputId": "2110d76f-6775-4091-a5db-6fb1396cb59d"
+        "outputId": "144891f9-c3ad-42cb-a332-25fc5cc9b243"
       },
       "source": [
         "print(len(lst_arr_training), len(lst_gt_training))\n",
         "print(lst_arr_training[1000-1].shape, lst_gt_training[1000-1].shape)"
       ],
-      "execution_count": 16,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -578,7 +632,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aqN3NZlCkkje",
-        "outputId": "a5d08c06-1c72-4dda-9acc-177788145463"
+        "outputId": "313f9df2-82fc-4a5a-e8df-0f1a0420a28a"
       },
       "source": [
         "arr_training = np.asarray(lst_arr_training)\n",
@@ -586,7 +640,7 @@
         "\n",
         "arr_training.shape, arr_gt.shape"
       ],
-      "execution_count": 17,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -596,7 +650,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 15
         }
       ]
     },
@@ -619,7 +673,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FpxHfBGzl1f7",
-        "outputId": "6b6198af-7245-45b3-d9ae-b86f0d1b920b"
+        "outputId": "89b3b47a-d5be-45f2-8985-48d07c7adc93"
       },
       "source": [
         "num_of_img,bands,rows,columns=arr_training.shape\n",
@@ -628,7 +682,7 @@
         "arr_training_res = np.reshape(arr_training,(num_of_img,rows,columns,bands))\n",
         "arr_training_res.shape"
       ],
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -645,7 +699,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 16
         }
       ]
     },
@@ -656,12 +710,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ElXLe1k7oLH8",
-        "outputId": "9ce819d0-c0a5-46e7-fc33-e238770872da"
+        "outputId": "3c795ba3-d7e9-4f57-9408-a2954b7a83dd"
       },
       "source": [
         "type(arr_training_res)"
       ],
-      "execution_count": 19,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -671,7 +725,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 17
         }
       ]
     },
@@ -693,7 +747,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ISTo5OOHoSrV",
-        "outputId": "540020ac-adc3-4177-aa02-fbd1b3bcd7ad"
+        "outputId": "a7518695-e70d-435a-9d2f-c7516157ce26"
       },
       "source": [
         "print('[AI4EO_MOOC]_log: Normalization of data into [0,1] interval...')\n",
@@ -702,7 +756,7 @@
         "  amax_tmp=np.amax(arr_training_res[i,:,:,:])\n",
         "  arr_training_res[i,:,:,:] = arr_training_res[i,:,:,:] / amax_tmp"
       ],
-      "execution_count": 20,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -729,12 +783,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e8k6cHerOvVz",
-        "outputId": "5cc0576b-49ad-43e7-e52c-67c36a9f9388"
+        "outputId": "299878ea-d8ee-4176-e70a-cb3525ec64a4"
       },
       "source": [
         "arr_training_res[1000-1,:,:,:]"
       ],
-      "execution_count": 21,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -828,7 +882,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 19
         }
       ]
     },
@@ -838,7 +892,7 @@
         "id": "h0gubL7dRDfz"
       },
       "source": [
-        "# **2. Create training and test subsets from input data\n",
+        "# **2. Create training and test subsets from input data**\n",
         "\n",
         "We'll randomly split the training data into a `training subset` and a `testing subset`. Scikit-learn offers a popular function called `train-test-split()`, which creates 4 subsets based on the input and output variables `X - arr_training_res` and `y - arr_gt`. The function takes the following kwargs.\n",
         "* `arrays`: input and output data arrays\n",
@@ -855,7 +909,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AB7vhItcQw02",
-        "outputId": "bc36658e-669b-44b1-80de-34dead7bf62e"
+        "outputId": "741f9de4-dce5-458c-8ddf-04fa1f51e1ee"
       },
       "source": [
         "test_size=0.15\n",
@@ -868,7 +922,7 @@
         "        test_size=test_size,\n",
         "        random_state=42)"
       ],
-      "execution_count": 22,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -885,7 +939,7 @@
         "id": "AjczIXyaTzuQ"
       },
       "source": [
-        "## **3. Define the Convolutional Neural Network architecture**\n",
+        "# **3. Define the Convolutional Neural Network architecture**\n",
         "\n",
         "As our first step, we'll initiate a `sequential neural network` model with the Keras class `keras.Sequential()`."
       ]
@@ -893,18 +947,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "G4MBqhs0ULzj",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "G4MBqhs0ULzj",
-        "outputId": "f21e9358-2d86-47ba-9a38-04d476c2fed6"
+        "outputId": "53e62f42-8fc5-424b-d6a0-42b15c602861"
       },
       "source": [
         "_, num_classes = y_train.shape\n",
         "print('[AI4EO_MOOC]_log: Convolutional Neural Network architecture:')\n",
         "model = keras.Sequential()"
       ],
-      "execution_count": 24,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,10 +1000,67 @@
         "id": "UNZhkwRLmPI8"
       },
       "source": [
-        ""
+        "model.add(Conv2D(32, (3, 3), padding='same', input_shape=X_train.shape[1:]))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(Conv2D(32, (3, 3)))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+        "model.add(Dropout(0.25))\n",
+        "\n",
+        "\n",
+        "model.add(Conv2D(64, (3, 3), padding='same'))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(Conv2D(64, (3, 3)))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+        "model.add(Dropout(0.25))\n",
+        "\n",
+        "model.add(Flatten())\n",
+        "model.add(Dense(512))\n",
+        "model.add(Activation('relu'))\n",
+        "model.add(Dropout(0.5))\n",
+        "model.add(Dense(num_classes))\n",
+        "model.add(Activation('softmax'))"
+      ],
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uGAFthPApDpK"
+      },
+      "source": [
+        "After the model architecture has been defined you can compile(configure) the model with `model.compile()` and define the following hyperparameters:\n",
+        "\n",
+        "* `loss='categorical_crossentropy'`- Categorical crossentropy is one of many loss options and calculates the crossentropy loss between the labels and the predictions\n",
+        "* `optimizer=RMSprop(lr=0.0001, decay=1e-6)`- Optimizers are algorithms the network learns from\n",
+        "* `metrics=['accuracy']`- is used to evaluate how the model is performing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TLS4oUxNn0Yy"
+      },
+      "source": [
+        "opt = keras.optimizers.RMSprop(lr=0.0001, decay=1e-6)\n",
+        "\n",
+        "model.compile(loss='categorical_crossentropy',\n",
+        "              optimizer=opt,\n",
+        "              metrics=['accuracy'])"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WSWECAheqqgv"
+      },
+      "source": [
+        ""
+      ]
     }
   ]
 }
